k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ops
  labels:
    app: ops
    env: production
